# interaktiv.gdpr

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  buildout.cfg  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflow/: publish.yaml
src/interaktiv/gdpr/: __init__.py  config.py  configure.zcml  deletion_info_helper.py  deletion_log.py  interfaces.py  setuphandlers.py  testing.py  utils.py
src/interaktiv/gdpr/behaviors/: configure.zcml  deletion_info.py
src/interaktiv/gdpr/contenttypes/: configure.zcml  marked_deletion_container.py
src/interaktiv/gdpr/controlpanels/: configure.zcml  controlpanel.py  dashboard.py
src/interaktiv/gdpr/locales/: interaktiv.gdpr.pot  rebuildPo.sh
src/interaktiv/gdpr/patches/: __init__.py  configure.zcml  manage_del_objects.py
src/interaktiv/gdpr/permissions/: __init__.py  configure.zcml
src/interaktiv/gdpr/registry/: deletion_log.py
src/interaktiv/gdpr/services/: configure.zcml  delete.py  withdraw.py
src/interaktiv/gdpr/tests/: test_contenttypes_marked_deletion_container.py  test_controlpanels_controlpanel.py  test_controlpanels_dashboard.py  test_deletion_info_helper.py  test_deletion_log.py  test_patches_manage_del_objects.py  test_registry_deletion_log.py  test_services_actions_delete.py  test_services_actions_permanent_delete.py  test_services_actions_withdraw.py  test_services_deletion_log_get.py  test_services_settings_get.py  test_services_settings_set.py  test_setup.py  test_setuphandlers.py  test_views_delete_confirmation.py  test_views_init.py  test_views_traverser.py
(+30 files in other folders)
