[project]
name = "interaktiv.gdpr"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Interaktiv GmbH", email = "info@interaktiv.de" }
]
license = { text = "GPL-2.0-or-later" }
keywords = []
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "setuptools >=20.8.1",
    "Products.CMFPlone>=6.0.13",
    "plone.testing",
    "plone.app.testing",
    "interaktiv.framework"
]

[project.optional-dependencies]
test = ["plone.app.testing"]

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["interaktiv.*"]

[tool.setuptools]
namespace-packages = ["interaktiv"]
include-package-data = true
zip-safe = false

[tool.setuptools.entry-points."z3c.autoinclude.plugin"]
target = "plone"
